--- a/.config/i3/config
+++ b/.config/i3/config
@@ -9,7 +9,7 @@
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
-exec --no-startup-id compton -b
+exec --no-startup-id picom -b
 set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
@@ -32,7 +32,7 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 #exec --no-startup-id nm-applet
 
 # Use xlayoutdisplay to set xrandr settings 
-exec --no-startup-id xlayoutdisplay -p DP-1-0 -o HDMI-2 -o DP-1-0
+# exec --no-startup-id xlayoutdisplay -p DP-1-0 -o HDMI-2 -o DP-1-0
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
@@ -163,6 +163,16 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+## colors
+#
+
+
+## misc
+#
+# focus_follows_mouse no 
+#
+#
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
@@ -170,6 +180,7 @@ bar {
 }
 for_window [class="^.*"] border pixel 2
 gaps inner 10
-gaps outer 15
+gaps outer 5
 smart_gaps on
 smart_borders on
+
