--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -204,13 +204,13 @@ blur-background-exclude = [
 #################################
 
 # Daemonize process. Fork to background after initialization. Causes issues with certain (badly-written) drivers.
-# daemon = false
+daemon = true
 
 # Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
 # backend = 'glx'
-backend = "xrender";
+backend = "xrender"
 
 # Enable/disable VSync.
 # vsync = false
@@ -265,7 +265,7 @@ refresh-rate = 0
 # to maximize performance for full-screen windows. Known to cause flickering 
 # when redirecting/unredirecting windows.
 #
-# unredir-if-possible = false
+unredir-if-possible = true
 
 # Delay before unredirecting the window, in milliseconds. Defaults to 0.
 # unredir-if-possible-delay = 0
@@ -309,14 +309,14 @@ detect-client-leader = true
 # practically happened) and may not work with blur-background. 
 # My tests show a 15% performance boost. Recommended.
 #
-# glx-no-stencil = false
+ glx-no-stencil = true
 
 # GLX backend: Avoid rebinding pixmap on window damage. 
 # Probably could improve performance on rapid window content changes, 
 # but is known to break things on some drivers (LLVMpipe, xf86-video-intel, etc.).
 # Recommended if it works.
 #
-# glx-no-rebind-pixmap = false
+# glx-no-rebind-pixmap = true
 
 # Disable the use of damage information. 
 # This cause the whole screen to be redrawn everytime, instead of the part of the screen
@@ -330,7 +330,7 @@ use-damage = true
 # calls are finished before picom starts drawing. Needed on nvidia-drivers 
 # with GLX backend for some users.
 #
-# xrender-sync-fence = false
+xrender-sync-fence = false
 
 # GLX backend: Use specified GLSL fragment shader for rendering window contents. 
 # See `compton-default-fshader-win.glsl` and `compton-fake-transparency-fshader-win.glsl` 
@@ -375,7 +375,7 @@ log-level = "warn";
 # logs might still be written to the stderr. 
 # When setting this option from the config file, it is recommended to use an absolute path.
 #
-# log-file = '/path/to/your/log/file'
+log-file = "/var/log/picom.log"
 
 # Show all X errors (for debugging)
 # show-all-xerrors = false
