--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -115,7 +115,7 @@ fade-out-step = 0.03;
 #   Transparency / Opacity      #
 #################################
 
-
+active-opacity = 0.9;
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
 inactive-opacity = 0.8;
