--- a/.config/i3/config
+++ b/.config/i3/config
@@ -49,7 +49,7 @@ bindsym $mod+Return exec alacritty
 
 # kill focused window
 bindsym $mod+k kill
-
+bindsym Print exec maim --select | xclip -selection clipboard -t image/png
 # start dmenu (a program launcher)
 # bindsym $mod+d exec --no-startup-id dmenu_run
 # A more modern dmenu replacement is rofi:
