--- a/.config/i3/config
+++ b/.config/i3/config
@@ -9,12 +9,12 @@
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
-exec --no-startup-id picom -b
+exec --no-startup-id picom -b --experimental-backends
 set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 12
+font pango:Hermit 13
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -53,49 +53,56 @@ bindsym Print exec maim --select | xclip -selection clipboard -t image/png
 # start dmenu (a program launcher)
 # bindsym $mod+d exec --no-startup-id dmenu_run
 # A more modern dmenu replacement is rofi:
- bindsym $mod+d exec rofi -modi drun -show
+ bindsym $mod+t exec rofi -modi drun -show
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 #bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
+bindsym $mod+o exec picom-trans -c 100
+
 # change focus
 # alternatively, you can use the cursor keys:
-bindsym $mod+Left focus left
-bindsym $mod+Down focus down
-bindsym $mod+Up focus up
-bindsym $mod+Right focus right
-
+bindsym $mod+a focus left
+bindsym $mod+r focus down
+bindsym $mod+w focus up
+bindsym $mod+s focus right
+# move
 # alternatively, you can use the cursor keys:
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
+bindsym $mod+Left move left
+bindsym $mod+Down move down
+bindsym $mod+Up move up
+bindsym $mod+Right move right
 
 # split in horizontal orientation
-bindsym $mod+h split h
+# the i resembles a standing shape
+bindsym $mod+i split h
 
 # split in vertical orientation
-bindsym $mod+v split v
+# the - resembles a lying-down shape
+bindsym $mod+minus split v
 
 # enter fullscreen mode for the focused container
-bindsym $mod+f fullscreen toggle
+bindsym $mod+x fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
+# 
+bindsym $mod+period layout stacking
+bindsym $mod+comma layout tabbed
+bindsym $mod+p layout toggle split
 
 # toggle tiling / floating
-bindsym $mod+t floating toggle
+bindsym $mod+v floating toggle
 
 # change focus between tiling / floating windows
 bindsym $mod+space focus mode_toggle
 
+
+
 # focus the parent container
-bindsym $mod+a focus parent
+bindsym $mod+f focus parent
 
 # focus the child container
-#bindsym $mod+d focus child
+bindsym $mod+q focus child
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
@@ -139,7 +146,22 @@ bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+Escape exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+
+mode "shortcuts" {
+	bindsym d exec discord
+	bindsym f exec firefox
+	bindsym s exec spotify
+	bindsym g exec steam
+	bindsym l exec lutris
+	bindsym k exec krita
+
+	# back to normal
+	bindsym Escape mode "default"
+	bindsym Return mode "default"
+	bindsym Space mode "default"
+}
+bindsym $mod+j mode "shortcuts"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -150,22 +172,26 @@ mode "resize" {
         # Pressing up will shrink the window’s height.
         # Pressing down will grow the window’s height.
         # same bindings, but for the arrow keys
-        bindsym Left resize shrink width 10 px or 10 ppt
-        bindsym Down resize grow height 10 px or 10 ppt
-        bindsym Up resize shrink height 10 px or 10 ppt
-        bindsym Right resize grow width 10 px or 10 ppt
+        bindsym $mod+a resize shrink width 10 px or 10 ppt
+        bindsym $mod+w resize grow height 10 px or 10 ppt
+        bindsym $mod+r resize shrink height 10 px or 10 ppt
+        bindsym $mod+s resize grow width 10 px or 10 ppt
 
         # back to normal: Enter or Escape or $mod+r
         bindsym Return mode "default"
         bindsym Escape mode "default"
-        bindsym $mod+r mode "default"
+        bindsym $mod+g mode "default"
 }
 
-bindsym $mod+r mode "resize"
+bindsym $mod+g mode "resize"
 
-## colors
-#
-
+#colors
+# class                 border  backgr. text    indicator child_border
+client.focused          #6EB5FF #0OCDAC #fed352 #0OCDAC   #85E3FF
+client.focused_inactive #333333 #444444 #fed352 #666666   #465489
+client.unfocused        #111111 #222222 #DOC7E3 #292d2e   #333333
+client.urgent           #ED407B #000000 #F0725C #900000   #900000
+client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
 
 ## misc
 #
@@ -178,10 +204,9 @@ bindsym $mod+r mode "resize"
 bar {
         status_command i3status
 }
-for_window [class="^.*"] border pixel 2
-gaps inner 10
-gaps outer 5
-smart_gaps on
+for_window [class="^.*"] border pixel 1
+gaps inner 15
+gaps outer 0
 smart_borders on
 
 
