--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -115,17 +115,17 @@ fade-out-step = 0.03;
 #   Transparency / Opacity      #
 #################################
 
-active-opacity = 0.98;
+active-opacity = 0.9;
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
-inactive-opacity = 0.8;
+inactive-opacity = 0.7;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
 frame-opacity = 0.7;
 
 # Default opacity for dropdown menus and popup menus. (0.0 - 1.0, defaults to 1.0)
-# menu-opacity = 1.0
+menu-opacity = 0.85
 
 # Let inactive opacity set by -i override the '_NET_WM_OPACITY' values of windows.
 # inactive-opacity-override = true
@@ -160,41 +160,41 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 
 
 # Parameters for background blurring, see the *BLUR* section for more information.
-# blur-method = 
-# blur-size = 12
-#
-# blur-deviation = false
+blur-method = "dual_kawase"
+blur-strength = 11
+#blur-deviation = true
 
 # Blur background of semi-transparent / ARGB windows. 
 # Bad in performance, with driver-dependent behavior. 
 # The name of the switch may change without prior notifications.
 #
-# blur-background = false
+blur-background = true
 
 # Blur background of windows when the window frame is not opaque. 
 # Implies:
-#    blur-background 
+#blur-background 
 # Bad in performance, with driver-dependent behavior. The name may change.
 #
-# blur-background-frame = false
+blur-background-frame = true
 
 
 # Use fixed blur strength rather than adjusting according to window opacity.
-# blur-background-fixed = false
+blur-background-fixed = false
 
 
 # Specify the blur convolution kernel, with the following format:
 # example:
-#   blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
+# blur-kern = "5,5,5,5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
 #
 # blur-kern = ''
-blur-kern = "3x3box";
+#blur-kern = "7x7box";
 
 
 # Exclude conditions for background blur.
 # blur-background-exclude = []
 blur-background-exclude = [
   "window_type = 'dock'",
+  "name *?= 'slop'",
   "window_type = 'desktop'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
@@ -209,12 +209,12 @@ daemon = true
 # Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
-# backend = 'glx'
-backend = "xrender"
+backend = "glx"
+#backend = "xrender"
 
 # Enable/disable VSync.
 # vsync = false
-vsync = true
+#vsync = true
 
 # Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
 # dbus = false
@@ -309,14 +309,14 @@ detect-client-leader = true
 # practically happened) and may not work with blur-background. 
 # My tests show a 15% performance boost. Recommended.
 #
- glx-no-stencil = true
+glx-no-stencil = true
 
 # GLX backend: Avoid rebinding pixmap on window damage. 
 # Probably could improve performance on rapid window content changes, 
 # but is known to break things on some drivers (LLVMpipe, xf86-video-intel, etc.).
 # Recommended if it works.
 #
-# glx-no-rebind-pixmap = true
+glx-no-rebind-pixmap = true
 
 # Disable the use of damage information. 
 # This cause the whole screen to be redrawn everytime, instead of the part of the screen
@@ -324,7 +324,7 @@ detect-client-leader = true
 # The opposing option is use-damage
 #
 # no-use-damage = false
-use-damage = true
+use-damage = false
 
 # Use X Sync fence to sync clients' draw calls, to make sure all draw 
 # calls are finished before picom starts drawing. Needed on nvidia-drivers 
@@ -357,8 +357,7 @@ xrender-sync-fence = false
 
 # Make transparent windows clip other windows like non-transparent windows do,
 # instead of blending on top of them.
-#
-# transparent-clipping = false
+transparent-clipping = false
 
 # Set the log level. Possible values are:
 #  "trace", "debug", "info", "warn", "error"
