--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -74,6 +74,8 @@
 # Window title
 #title: Alacritty
 
+
+
 # Allow terminal applications to change Alacritty's window title.
 window.dynamic_title: true
   # Window class (Linux/BSD only):
@@ -170,11 +172,11 @@ font:
     #draw_bold_text_with_bright_colors: false
 
     # Colors (Tomorrow Night)
-    #colors:
+colors:
     # Default colors
-    #primary:
-    #  background: '#1d1f21'
-    #  foreground: '#c5c8c6'
+    primary:
+        background: '0x282a36'
+        foreground: '0xf8f8f2'
 
     # Bright and dim foreground colors
     #
@@ -191,9 +193,9 @@ font:
     #
     # Allowed values are CellForeground and CellBackground, which reference the
     # affected cell, or hexadecimal colors like #ff00ff.
-    #cursor:
-    #  text: CellBackground
-    #  cursor: CellForeground
+    cursor:
+        text: '0x44475a'
+        cursor: '0xf8f8f2'
 
     # Vi mode cursor colors
     #
@@ -211,9 +213,9 @@ font:
     #
     # Allowed values are CellForeground and CellBackground, which reference the
     # affected cell, or hexadecimal colors like #ff00ff.
-    #selection:
-    #  text: CellBackground
-    #  background: CellForeground
+    selection:
+        text: '0xf8f8f2'
+        background: '0x44475a'
 
     # Search colors
     #
@@ -232,41 +234,41 @@ font:
     #  background: '#c5c8c6'
     #  foreground: '#1d1f21'
 
-    # Normal colors
-    #normal:
-    #  black:   '#1d1f21'
-    #  red:     '#cc6666'
-    #  green:   '#b5bd68'
-    #  yellow:  '#f0c674'
-    #  blue:    '#81a2be'
-    #  magenta: '#b294bb'
-    #  cyan:    '#8abeb7'
-    #  white:   '#c5c8c6'
+    #Normal colors
+    normal:
+        black:   '0x000000'
+        red:     '0xff5555'
+        green:   '0x50fa7b'
+        yellow:  '0xf1fa8c'
+        blue:    '0xbd93f9'
+        magenta: '0xff79c6'
+        cyan:    '0x8be9fd'
+        white:   '0xbfbfbf'
 
-    # Bright colors
-    #bright:
-    #  black:   '#666666'
-    #  red:     '#d54e53'
-    #  green:   '#b9ca4a'
-    #  yellow:  '#e7c547'
-    #  blue:    '#7aa6da'
-    #  magenta: '#c397d8'
-    #  cyan:    '#70c0b1'
-    #  white:   '#eaeaea'
+    #Bright colors
+    bright:
+        black:   '0x4d4d4d'
+        red:     '0xff6e67'
+        green:   '0x5af78e'
+        yellow:  '0xf4f99d'
+        blue:    '0xcaa9fa'
+        magenta: '0xff92d0'
+        cyan:    '0x9aedfe'
+        white:   '0xe6e6e6'
 
     # Dim colors
     #
     # If the dim colors are not set, they will be calculated automatically based
     # on the `normal` colors.
-    #dim:
-    #  black:   '#131415'
-    #  red:     '#864343'
-    #  green:   '#777c44'
-    #  yellow:  '#9e824c'
-    #  blue:    '#556a7d'
-    #  magenta: '#75617b'
-    #  cyan:    '#5b7d78'
-    #  white:   '#828482'
+    dim:
+        black:   '0x14151b'
+        red:     '0xff2222'
+        green:   '0x1ef956'
+        yellow:  '0xebf85b'
+        blue:    '0x4d5b86'
+        magenta: '0xff46b0'
+        cyan:    '0x59dffc'
+        white:   '0xe6e6d1'
 
     # Indexed Colors
     #
