--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -48,7 +48,7 @@ shadow-offset-y = -7;
 # here means windows setting its shape through X Shape extension. 
 # Those using ARGB background is beyond our control. 
 # Deprecated, use 
-#   shadow-exclude = 'bounding_shaped'
+shadow-exclude = 'bounding_shaped'
 # or 
 #   shadow-exclude = 'bounding_shaped && !rounded_corners'
 # instead.
