--- a/.config/i3/config
+++ b/.config/i3/config
@@ -199,15 +199,10 @@ client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
 #
 #
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
-bar {
-        status_command i3status
-}
 for_window [class="^.*"] border pixel 1
 gaps inner 15
 gaps outer 0
 smart_borders on
 
-
+exec_always --no-startup-id /home/mrdoor/.config/polybar/launch.sh
 exec feh --no-xinerama --bg-tile /home/mrdoor/shots/reflective
