--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,8 +1,6 @@
 #################################
 #             Shadows           #
 #################################
-
-
 # Enabled client-side shadows on windows. Note desktop windows 
 # (windows with '_NET_WM_WINDOW_TYPE_DESKTOP') never get shadow, 
 # unless explicitly requested using the wintypes option.
@@ -48,7 +46,7 @@ shadow-offset-y = -7;
 # here means windows setting its shape through X Shape extension. 
 # Those using ARGB background is beyond our control. 
 # Deprecated, use 
-shadow-exclude = 'bounding_shaped'
+# shadow-exclude = "bounding_shaped";
 # or 
 #   shadow-exclude = 'bounding_shaped && !rounded_corners'
 # instead.
@@ -66,7 +64,8 @@ shadow-exclude = [
   "class_g = 'Conky'",
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
-  "_GTK_FRAME_EXTENTS@:c"
+  "_GTK_FRAME_EXTENTS@:c",
+  "bounding_shaped"
 ];
 
 # Specify a X geometry that describes the region in which shadow should not
