--- a/.config/i3/config
+++ b/.config/i3/config
@@ -7,8 +7,8 @@
 # i3 config file (v4)
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
-
-exec --no-startup-id picom -b --experimental-backends
+exec-always --no-startup-id killall picom
+exec-always --no-startup-id picom -b --experimental-backends
 set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
