--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -178,7 +178,7 @@ blur-background-frame = true
 
 
 # Use fixed blur strength rather than adjusting according to window opacity.
-blur-background-fixed = false
+blur-background-fixed = true
 
 
 # Specify the blur convolution kernel, with the following format:
@@ -192,7 +192,7 @@ blur-background-fixed = false
 # Exclude conditions for background blur.
 # blur-background-exclude = []
 blur-background-exclude = [
-  "window_type = 'dock'",
+  #"window_type = 'dock'",
   "name *?= 'slop'",
   "window_type = 'desktop'",
   "_GTK_FRAME_EXTENTS@:c"
