--- a/.config/i3/config
+++ b/.config/i3/config
@@ -7,7 +7,7 @@
 # i3 config file (v4)
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
-exec --no-startup-id picom -b --experimental-backends
+exec --no-startup-id picom -b --experimental-backends --config $HOME/.config/i3/picom.conf
 set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
