--- a/.config/i3/config
+++ b/.config/i3/config
@@ -104,10 +104,10 @@ bindsym $mod+q focus child
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
-set $ws1 "1"
-set $ws2 "2"
-set $ws3 "3"
-set $ws4 "4"
+set $ws1 "1:main"
+set $ws2 "2:secondary"
+set $ws3 "3:work"
+set $ws4 "4:junkyard"
 set $ws5 "5"
 set $ws6 "6"
 set $ws7 "7"
@@ -196,8 +196,17 @@ client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
 # focus_follows_mouse no 
 #
 #
+workspace $WS1 output DP-0
+workspace $WS2 output HDMI-0
+workspace $WS3 output DP-0
+workspace $WS4 output HDMI-0
 
 for_window [class="^.*"] border pixel 1
+for_window [class="jetbrains-toolbox"] floating enable
+assign [class="jetbrains-clion"] $WS3
+assign [class="discord"] $WS2 
+for_window [class="Spotify"] move container to workspace $ws4
+
 gaps inner 15
 gaps outer 0
 smart_borders on
